# mcp-sandtimer-py

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/mcp_sandtimer/: __init__.py  __main__.py  server.py
